# rex

./: .dockerignore  .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.sandbox  LICENSE  README.md  docker-bake.hcl  install.sh  lefthook.yml  package-lock.json  package.json  release-please-config.json
benchmarks/: Dockerfile  METHODOLOGY.md  bench.py  bench_rsc.py  dashboard.html  dashboard.py  dashboard_helpers.py  pyproject.toml  results-readme.json  results.json  run.sh  test_dashboard.py
benchmarks/harness/: __main__.py  agent.py  conditions.py  evaluator.py  guides.py  mcp_tools.py  measure_frameworks.py  runner.py  sdk_runner.py
benchmarks/harness/tasks/: t1_01_static_page.toml  t1_02_dynamic_route.toml  t1_03_gssp_data.toml  t2_01_multi_page_nav.toml  t2_02_api_and_page.toml  t2_03_blog_index_detail.toml  t2_04_build_and_verify.toml  t2_05_fix_broken_app.toml
benchmarks/harness/web_bench/: __main__.py  adapter.py
benchmarks/next-app-basic/: package-lock.json  package.json  tsconfig.json
benchmarks/next-app-basic/app/: layout.tsx
benchmarks/next-basic/: .oxlintrc.json  package-lock.json  package.json  tsconfig.json
benchmarks/next-basic/pages/: 404.tsx  _app.tsx  about.tsx  gallery.tsx  index.tsx
benchmarks/next-tailwind/: package-lock.json  package.json
benchmarks/next-tailwind/pages/: _app.tsx  about.tsx  gallery.tsx  index.tsx  static.tsx
benchmarks/pages/: about.jsx  contact.jsx  index.jsx
benchmarks/results/: first_run.json  five_conditions.json  framework_factors.json  sonnet46_all.json  sonnet4_all.json  t204_deploy_sonnet46.json  t205_fixbuild_sonnet46.json  three_runs.json  tier1_all_guided_haiku.json  tier1_all_guided_haiku_v2.json  tier1_sdk_haiku.json  tier2_haiku.json  tier2_mcp_vs_guided.json  tier2_sdk_haiku.json  tier2_sdk_sonnet46.json  webbench_head2head.json  webbench_nextjs_sonnet46.json  webbench_nextjs_telem.json  webbench_rex_app_full.json  webbench_rex_app_haiku.json  webbench_rex_app_sonnet46.json  webbench_rex_app_t1.json  webbench_rex_app_t12.json  webbench_rex_app_t123.json  webbench_rex_app_t1_v2.json  webbench_rex_app_t2_v2.json  webbench_rex_app_t3_v2.json  webbench_rex_app_telem.json  webbench_rex_guide_fix_t1.json  webbench_rex_guide_fix_t2.json  webbench_rex_guide_fix_t3.json  webbench_rex_haiku.json  webbench_rex_nolayout_t1.json  webbench_rex_nolayout_t2.json  webbench_rex_nolayout_t3.json  webbench_rex_sonnet46.json
benchmarks/tanstack-basic/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
benchmarks/tanstack-basic/src/: routeTree.gen.ts
benchmarks/tanstack-tailwind/: .gitignore  package.json  tsconfig.json  vite.config.ts
benchmarks/vinext-basic/: .gitignore  package.json  tsconfig.json
benchmarks/vinext-basic/app/: layout.tsx  page.tsx
crates/rex_auth/: Cargo.toml
crates/rex_auth/src/: client_handlers.rs  config.rs  cookies.rs  csrf.rs  error.rs  jwt.rs  keys.rs  lib.rs  middleware.rs  pkce.rs  provider.rs  scopes.rs  session.rs  store.rs
crates/rex_auth/tests/: config_providers.rs  conformance.rs  pentest.rs  security.rs
crates/rex_build/: Cargo.toml  build.rs
crates/rex_build/src/: build_utils.rs  builtin_modules.rs  bundler.rs  cjs_interop.rs  client_bundle.rs  client_dep_bundle.rs  client_manifest.rs  css_collect.rs  css_modules.rs  dce.rs  dep_bundle.rs  diagnostics.rs  embedded_runtime.rs  entries.rs  esm_parse_helpers.rs  esm_transform.rs  esm_utils.rs  extra_dep_bundle.rs  font.rs  font_google.rs  lib.rs  manifest.rs  mdx.rs  page_exports.rs  precomputed_ids.rs  rsc_build_config.rs  rsc_bundler.rs  rsc_client_bundle.rs  rsc_entries.rs  rsc_entries_tests.rs  rsc_graph.rs  rsc_graph_tests.rs  rsc_server_bundle.rs  rsc_ssr_bundle.rs  rsc_stubs.rs  server_action_extract.rs  server_action_extract_tests.rs  server_action_manifest.rs  server_bundle.rs  server_dep_bundle.rs  (+7 more)
crates/rex_build/tests/: app_route_build_tests.rs  build_output_dir_tests.rs  build_tests.rs  builtin_modules_tests.rs  dce_tests.rs  embedded_runtime_tests.rs  esm_transform_tests.rs  esm_utils_tests.rs  export_tests.rs  font_tests.rs  image_tests.rs  integration_tests.rs  mdx_tests.rs  node_builtin_tests.rs  polyfill_alias_tests.rs  rsc_bundler_tests.rs  rsc_context_tests.rs  rsc_entries_tests.rs  rsc_graph.rs  rsc_graph_actions.rs  transform_tests.rs  vendor_chunk_tests.rs
crates/rex_cli/: Cargo.toml  build.rs
crates/rex_cli/src/: cmd_build.rs  cmd_dev.rs  cmd_fmt.rs  cmd_fmt_tests.rs  cmd_init.rs  cmd_lint.rs  cmd_live.rs  cmd_mcp.rs  cmd_start.rs  display.rs  export.rs  main.rs
crates/rex_core/: Cargo.toml
crates/rex_core/src/: app_route.rs  client_manifest.rs  config.rs  error.rs  error_buffer.rs  instance.rs  lib.rs  manifest.rs  route.rs
crates/rex_dev/: Cargo.toml
crates/rex_dev/src/: dev_middleware.rs  error_buffer.rs  hmr.rs  lib.rs  rebuild.rs  rebuild_esm.rs  scan_check.rs  tailwind.rs  typecheck.rs  watcher.rs
crates/rex_dev/tests/: dev_middleware.rs  watcher.rs
crates/rex_e2e/: Cargo.toml
crates/rex_e2e/src/: app_router_tests.rs  auth_tests.rs  hmr_esm_tests.rs  hmr_pages_tests.rs  lib.rs
crates/rex_e2e/tests/: aso_e2e.rs  export_e2e.rs  init_e2e.rs  live_e2e.rs  rsc_context_e2e.rs  rsc_e2e.rs  tailwind_e2e.rs
crates/rex_image/: Cargo.toml
crates/rex_image/src/: cache.rs  lib.rs  optimizer.rs
crates/rex_live/: Cargo.toml
crates/rex_live/src/: cache.rs  compiler.rs  handler.rs  lib.rs  project.rs  server.rs  source.rs  watcher.rs
crates/rex_live/tests/: live_tests.rs  pipeline_tests.rs
crates/rex_napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/rex_napi/src/: lib.rs  rex_instance.rs
crates/rex_napi/tests/: napi.test.mjs
crates/rex_python/: Cargo.toml  pyproject.toml
crates/rex_python/src/: lib.rs
crates/rex_python/tests/: test_renderer.py
crates/rex_router/: Cargo.toml
crates/rex_router/src/: app_scanner.rs  lib.rs  matcher.rs  scanner.rs
crates/rex_server/: Cargo.toml  build.rs
crates/rex_v8/: Cargo.toml
crates/rex_v8/src/: eval.rs  (+19 more)
(+408 files in other folders)
