[workspace]
resolver = "2"
members = [
    "crates/rex_cli",
    "crates/rex_core",
    "crates/rex_router",
    "crates/rex_build",
    "crates/rex_v8",
    "crates/rex_server",
    "crates/rex_dev",
]

[workspace.dependencies]
# V8 engine
v8 = "146"

# SWC
swc_common = { version = "18", features = ["sourcemap"] }
swc_ecma_parser = "34"
swc_ecma_ast = "20"
swc_ecma_visit = "20"
swc_ecma_codegen = "23"
swc_ecma_transforms_base = "37"
swc_ecma_transforms_react = "41"
swc_ecma_transforms_typescript = "41"
swc_bundler = "43"

# HTTP
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Concurrency
crossbeam-channel = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Collections
dashmap = "6"

# Async
futures = "0.3"

# File hashing
sha2 = "0.10"
hex = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
