[workspace]
resolver = "2"
members = [
    "crates/rex_cli",
    "crates/rex_core",
    "crates/rex_router",
    "crates/rex_build",
    "crates/rex_v8",
    "crates/rex_server",
    "crates/rex_dev",
    "crates/rex_image",
    "crates/rex_e2e",
    "crates/rex_mdx",
    "crates/rex_napi",
    "crates/rex_python",
]
# rex_python is a PyO3 cdylib — built via `maturin develop`, not `cargo build`.
# Exclude from default builds so `cargo build`/`cargo run` don't try to link
# against libpython. Use `cargo check -p rex_python` or `maturin develop` to
# build it explicitly.
default-members = [
    "crates/rex_cli",
    "crates/rex_core",
    "crates/rex_router",
    "crates/rex_build",
    "crates/rex_v8",
    "crates/rex_server",
    "crates/rex_dev",
    "crates/rex_image",
    "crates/rex_e2e",
    "crates/rex_napi",
]

[workspace.dependencies]
# V8 engine
v8 = "146"

# Bundler
rolldown = { git = "https://github.com/rolldown/rolldown", branch = "main" }
rolldown_common = { git = "https://github.com/rolldown/rolldown", branch = "main" }
rolldown_utils = { git = "https://github.com/rolldown/rolldown", branch = "main" }

# HTTP
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Concurrency
crossbeam-channel = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# OXC (not published to crates.io)
oxc_formatter = { git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_linter = { git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_diagnostics = { git = "https://github.com/oxc-project/oxc", branch = "main" }

# Parallelism
rayon = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Collections
dashmap = "6"
rustc-hash = "2"

# Async
futures = "0.3"

# File hashing
sha2 = "0.10"
hex = "0.4"

# Embed files at compile time
include_dir = "0.7"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"

# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
