[project]
name = "benchmarks"
version = "0.1.0"
description = "Rex vs Next.js vs TanStack Start benchmark suite"
requires-python = ">=3.13"
dependencies = [
    "marimo",
    "plotly",
    "pandas",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "black",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

