[package]
name = "rex_build"
version = "0.3.0" # x-release-please-version
edition = "2021"

[lints]
workspace = true

[dependencies]
rex_core = { path = "../rex_core" }
rex_router = { path = "../rex_router" }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }


[dev-dependencies]
tempfile = "3"
rex_v8 = { path = "../rex_v8" }
