[package]
name = "rex_build"
version = "0.15.0" # x-release-please-version
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
rex_core = { path = "../rex_core" }
rex_mdx = { path = "../rex_mdx" }
rex_router = { path = "../rex_router" }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
include_dir = { workspace = true }
reqwest = { workspace = true }
oxc_allocator = "0.115"
oxc_parser = "0.115"
oxc_semantic = "0.115"
oxc_ast = "0.115"
oxc_span = "0.115"
oxc_syntax = "0.115"
rex_v8 = { path = "../rex_v8" }
lightningcss = { workspace = true }

[build-dependencies]
oxc_allocator = "0.115"
oxc_codegen = "0.115"
oxc_parser = "0.115"
oxc_semantic = "0.115"
oxc_span = "0.115"
oxc_transformer = "0.115"

[dev-dependencies]
tempfile = "3"
rex_server = { path = "../rex_server" }
