[package]
name = "rex_core"
version = "0.9.0" # x-release-please-version
edition = "2021"
description = "Core types and configuration for the Rex framework"
license = "MIT"
repository = "https://github.com/limlabs/rex"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
