[package]
name = "rex_dev"
version = "0.2.0" # x-release-please-version
edition = "2021"

[lints]
workspace = true

[dependencies]
rex_core = { path = "../rex_core" }
rex_router = { path = "../rex_router" }
rex_build = { path = "../rex_build" }
rex_v8 = { path = "../rex_v8" }
rex_server = { path = "../rex_server" }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
