[package]
name = "rex_e2e"
version = "0.5.0" # x-release-please-version
edition = "2021"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.26"
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
