[package]
name = "rex_e2e"
version = "0.12.0" # x-release-please-version
edition = "2021"
publish = false

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.26"
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
