[package]
name = "rex_image"
version = "0.3.0" # x-release-please-version
edition = "2021"

[lints]
workspace = true

[dependencies]
image = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
