[package]
name = "rex_image"
version = "0.17.1" # x-release-please-version
edition = "2021"
description = "Image optimization and processing for the Rex framework"
license = "MIT"
repository = "https://github.com/limlabs/rex"

[lints]
workspace = true

[dependencies]
image = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
