[package]
name = "rex_python"
version = "0.9.0" # x-release-please-version
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
name = "rex_py"
crate-type = ["cdylib"]

[dependencies]
rex_core = { path = "../rex_core" }
rex_router = { path = "../rex_router" }
rex_build = { path = "../rex_build" }
rex_v8 = { path = "../rex_v8" }
rex_server = { path = "../rex_server" }

pyo3 = { version = "0.28", features = ["extension-module"] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
