[package]
name = "rex_router"
version = "0.10.0" # x-release-please-version
edition = "2021"
description = "File-system router with trie-based matching for the Rex framework"
license = "MIT"
repository = "https://github.com/limlabs/rex"

[lints]
workspace = true

[dependencies]
rex_core = { path = "../rex_core", version = "0.10.0" } # x-release-please-version
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
