[package]
name = "rex_server"
version = "0.5.0" # x-release-please-version
edition = "2021"

[lints]
workspace = true

[dependencies]
rex_core = { path = "../rex_core" }
rex_router = { path = "../rex_router" }
rex_build = { path = "../rex_build" }
rex_v8 = { path = "../rex_v8" }
rex_image = { path = "../rex_image" }
rex_auth = { path = "../rex_auth" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { workspace = true, features = ["json"] }
rex_auth = { path = "../rex_auth" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
sha2 = { workspace = true }
base64 = { workspace = true }
url = "2"
