[package]
name = "rex_server"
version = "0.19.2" # x-release-please-version
edition = "2021"
publish = false

[lints]
workspace = true

[features]
default = ["build"]
build = ["dep:rex_build"]

[dependencies]
rex_core = { path = "../rex_core" }
rex_router = { path = "../rex_router" }
rex_build = { path = "../rex_build", optional = true }
rex_v8 = { path = "../rex_v8" }
rex_image = { path = "../rex_image" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
url = "2"

[build-dependencies]
oxc_allocator = "0.115"
oxc_codegen = "0.115"
oxc_parser = "0.115"
oxc_semantic = "0.115"
oxc_span = "0.115"
oxc_transformer = "0.115"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
