[package]
name = "rex_v8"
version = "0.5.0" # x-release-please-version
edition = "2021"

[lints]
workspace = true

[dependencies]
rex_core = { path = "../rex_core" }
v8 = { workspace = true }
crossbeam-channel = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
