[package]
name = "rex_v8"
version = "0.10.0" # x-release-please-version
edition = "2021"
description = "V8 isolate pool and SSR engine for the Rex framework"
license = "MIT"
repository = "https://github.com/limlabs/rex"

[lints]
workspace = true

[dependencies]
rex_core = { path = "../rex_core", version = "0.10.0" } # x-release-please-version
v8 = { workspace = true }
crossbeam-channel = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures = "0.3"

[dev-dependencies]
rex_build = { path = "../rex_build", version = "0.10.0" } # x-release-please-version
tempfile = "3"
tracing-subscriber = { workspace = true }
